@@ -1,11 +1,13 @@
 2009-11-16  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/x86_64/aorrlsh2_n.asm: Optimize inner loop.
+
 	* configure.in (gmp_mpn_functions_optional): Remove copyi,copyd, they
 	are now in gmp_mpn_functions.  Analogously move logical functions.
 
 2009-11-16  Marco Bodrato <bodrato@mail.dm.unipi.it>
 
-	* mpn/generic/toom53_mul.c: Use addlsh2 for evaluation.(and fix typo)
+	* mpn/generic/toom53_mul.c: Use addlsh2 for evaluation (and fix typo).
 	* mpn/generic/toom_eval_dgr3_pm2.c: Likewise (affects toom44 and 43).
 
 	* mpn/asm-defs.m4: Fix comments for op_lsh2 new functions.
